# Swarm-Tools

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.cargo/: config.toml
.claude-plugin/: plugin.json
.github/workflows/: release.yml
config_examples/: coding_swarm.json  large_scale.json  research_swarm.json
hooks/: hooks.json  precompact.rs  subagent_stop.rs
scripts/: download-model.ps1
src/: codified_reasoning.rs  communication_optimizer.rs  config.rs  cost_benefit.rs  enhanced_monitor.rs  feature_config.rs  iterative_refinement.rs  lib.rs  loop_detector.rs  mcp_router.rs  model_tier.rs  omac_optimizer.rs  parallel_execution.rs  quality_gate.rs  ranking.rs.disabled  role_router.rs  security.rs  self_healing.rs  semantic_engine.rs  team_optimizer.rs  trajectory_compressor.rs  types.rs
tests/: communication_optimizer.rs  comprehensive_integration.rs  cost_benefit.rs  enhanced_monitor.rs  iterative_refinement.rs  loop_detection.rs  omac_optimizer.rs  parallel_execution.rs  resource_allocation.rs  team_optimizer.rs  trajectory_compression.rs
