[package]
name = "swarm-tools"
version = "1.0.0"
edition = "2021"
authors = ["Swarm Tools Contributors"]
description = "Autonomous swarm optimization tools - pure Rust implementation"
license = "MIT"
repository = "https://github.com/your-username/swarm-tools"
keywords = ["swarm", "autonomous", "agents", "optimization"]
categories = ["development-tools", "algorithms"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
strsim = "0.11.1"
hex = "0.4.3"
lru = "0.12.5"
thiserror = "1.0.69"
anyhow = "1.0.100"
sha2 = "0.10.9"

[lib]
name = "swarm_tools"
path = "src/lib.rs"

[[bin]]
name = "precompact"
path = "hooks/precompact.rs"

[[bin]]
name = "subagent_stop"
path = "hooks/subagent_stop.rs"
