[package]
name = "swarm-tools"
version = "1.0.0"
edition = "2021"
authors = ["Swarm Tools Contributors"]
description = "Autonomous swarm optimization tools - pure Rust implementation with semantic embeddings"
license = "MIT"
repository = "https://github.com/your-username/swarm-tools"
keywords = ["swarm", "autonomous", "agents", "optimization", "embedding"]
categories = ["development-tools", "algorithms"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
strsim = "0.11.1"
hex = "0.4.3"
lru = "0.12.5"
thiserror = "1.0.69"
anyhow = "1.0.100"
sha2 = "0.10.9"

# Semantic Engine Dependencies
# ort handles its own ONNX Runtime binary downloading
tokenizers = { version = "0.19", optional = true }
ndarray = "0.16"
lazy_static = "1.5"

[features]
default = ["semantic"]
# semantic-ort: Full ONNX-based embeddings (requires system libs on Windows)
# semantic: Fallback tokenizer-based embeddings (works everywhere)
semantic = ["dep:tokenizers"]

# Platform-specific ONNX Runtime support
[target.'cfg(not(windows))'.dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries"] }

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
